--- a/test.html
+++ b/test.html
@@ -6,11 +6,12 @@
 	<script type="text/javascript">
 		
 	window.onload = function(){
+		var oDiv = document.getElementById('div1');
 		
 	}
 	</script>
 </head>
 <body>
-	
+	<div id="div1"></div>
 </body>
 </html>
